<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/totalAmountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="4sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payments"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paymentsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        tools:listitem="@layout/item_payments"/>
    <TextView
        android:id="@+id/addPaymentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/blue_hyperlink"
        android:text="@string/add_payment_underline"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBt"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:paddingHorizontal="45dp"
        android:textSize="24sp"
        android:paddingVertical="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_light"
        app:strokeColor="@color/black"
        app:strokeWidth="1sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
</LinearLayout>