<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_marginHorizontal="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_payment"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee_symbol"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/amountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:paddingVertical="4dp"
                android:paddingStart="8dp"
                android:background="@drawable/bg_outlined_box"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_outlined_box"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="4dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/modeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <EditText
            android:id="@+id/providerEt"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_hint"
            android:paddingVertical="4dp"
            android:paddingStart="8dp"
            android:background="@drawable/bg_outlined_box"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/transactionReferenceEt"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_reference"
            android:paddingVertical="4dp"
            android:paddingStart="8dp"
            android:background="@drawable/bg_outlined_box"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:gravity="end">
        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/okBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_hyperlink"
            android:text="@string/ok"
            android:minWidth="0dp"
            android:textSize="16sp"
            android:layout_marginStart="24dp"/>
    </LinearLayout>
</LinearLayout>
